2004-02-23  Dominique Devriese  <devriese@kde.org>

	* Add a ContainsTestType, testing whether a given point is on a
	given curve.

2004-02-17  Dominique Devriese  <devriese@kde.org>

	* Add the possibility to give an item a custom color in the 
	  popup dialog.

2004-02-16  Dominique Devriese  <devriese@kde.org>

	* make the usetext in TestConstructMode also appear for all other
	arguments than the last one

2004-02-15  Dominique Devriese  <devriese@kde.org>

	* Add code by Maurizio Paolini, and some adaptations of his code
	by me for supporting property tests like "are these two lines
	parallel ?"
	
	* update the aboutdata: Maurizio Paolini did not only help with
	math intensive code, and Franco Pasquarelli did some very
	important work in the locus code.

2004-02-14  Dominique Devriese  <devriese@kde.org>

	* Fix a bug waiting to pop up in construct_mode.cc, where you
	select the same object twice.

	* Add documentation about the locus and textlabel design to the
	DESIGN document.

2004-02-10  Dominique Devriese  <devriese@kde.org>

	* Fix a bug which caused Kig to crash on moving a text label by
	removing a wrong assertion in objects/object_calcer.cc

2004-02-09  Dominique Devriese  <devriese@kde.org>

	* Replace the line-line-intersection algorithm with a much simpler
	one by Maurizio Paolini

	* Add three new transformations by Maurizio Paolini

	* Remove people-to-inform-about-kig-releases as no further
	separate releases are planned.

2004-02-08  Dominique Devriese  <devriese@kde.org>

	* Fix a bug reported by Maurizio Paolini: don't crash on getting
	the arguments for a locus in the wrong order.

2004-01-21  Dominique Devriese  <devriese@kde.org>

	* replace my own autoconf code in configure.in.in for checking for
	boost.python and python by some macro's by Ben Burton which
	additionally check whether the python and boost.python combination
	found is sane.  They're also generally cleaner and such.

	* clean up configure.in.bot a bit
